gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/named_arguments_error.d
version https://git-lfs.github.com/spec/v1
oid sha256:2f7eaf81cc7e020c0dc16c3d6837564defe1aa9ce06b69444f0c89fa4970a1d1
size 2549
